// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches the prior snapshot 1`] = `
<div
  className="MuiPaper-root-159 MuiPaper-elevation1-162 MuiPaper-rounded-160 MuiCard-root-158 APIComponent-root-154"
>
  <div
    className="MuiCardHeader-root-186"
  >
    <div
      className="MuiCardHeader-content-189"
    >
      <span
        className="MuiTypography-root-192 MuiTypography-headline-197 MuiCardHeader-title-190"
      >
        New Tournament
      </span>
    </div>
  </div>
  <hr
    className="MuiDivider-root-217"
  />
  <div
    className="MuiCardContent-root-221 APIComponent-content-155"
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 MuiFormControl-fullWidth-225 APIComponent-field-156"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-marginDense-228"
        data-shrink={false}
        htmlFor="tournament-name"
      >
         Name
      </label>
      <div
        className="MuiInput-root-236 MuiInput-fullWidth-243 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={true}
          className="MuiInput-input-244 MuiInput-inputMarginDense-245"
          defaultValue={undefined}
          disabled={false}
          id="tournament-name"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 MuiFormControl-fullWidth-225 APIComponent-field-156"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-marginDense-228"
        data-shrink={false}
        htmlFor="tournament-description"
      >
        Description
      </label>
      <div
        className="MuiInput-root-236 MuiInput-fullWidth-243 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-244 MuiInput-inputMarginDense-245"
          defaultValue={undefined}
          disabled={false}
          id="tournament-description"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 APIComponent-field-156"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-marginDense-228"
        data-shrink={false}
        htmlFor="tournament-category"
      >
        Category
      </label>
      <div
        className="MuiInput-root-236 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <div
          className="MuiSelect-root-249"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-250 MuiSelect-selectMenu-251 MuiInput-input-244 MuiInput-inputMarginDense-245"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203;",
                }
              }
            />
          </div>
          <input
            autoComplete={undefined}
            autoFocus={undefined}
            defaultValue={undefined}
            id="tournament-category"
            name={undefined}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            rows={undefined}
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-254 MuiSelect-icon-253"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 APIComponent-field-156"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-shrink-229 MuiInputLabel-marginDense-228"
        data-shrink={true}
        htmlFor="tournament-date"
      >
        Date
      </label>
      <div
        className="MuiInput-root-236 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-244 MuiInput-inputType-247 MuiInput-inputMarginDense-245"
          defaultValue={undefined}
          disabled={false}
          id="tournament-date"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="date"
          value="2018-07-30"
        />
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 APIComponent-field-156"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-marginDense-228"
        data-shrink={false}
        htmlFor="tournament-pairingMethod"
      >
        Pairing Method
      </label>
      <div
        className="MuiInput-root-236 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <div
          className="MuiSelect-root-249"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-250 MuiSelect-selectMenu-251 MuiInput-input-244 MuiInput-inputMarginDense-245"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203;",
                }
              }
            />
          </div>
          <input
            autoComplete={undefined}
            autoFocus={undefined}
            defaultValue={undefined}
            id="tournament-pairingMethod"
            name={undefined}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            rows={undefined}
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-254 MuiSelect-icon-253"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 APIComponent-field-156"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-marginDense-228"
        data-shrink={false}
        htmlFor="tournament-pairingMethodInitial"
      >
        Initial Pairing Method
      </label>
      <div
        className="MuiInput-root-236 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <div
          className="MuiSelect-root-249"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-250 MuiSelect-selectMenu-251 MuiInput-input-244 MuiInput-inputMarginDense-245"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203;",
                }
              }
            />
          </div>
          <input
            autoComplete={undefined}
            autoFocus={undefined}
            defaultValue={undefined}
            id="tournament-pairingMethodInitial"
            name={undefined}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            rows={undefined}
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-254 MuiSelect-icon-253"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 APIComponent-field-156"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-marginDense-228"
        data-shrink={false}
        htmlFor="tournament-podSizeMinimum"
      >
        Minimum Pod Size
      </label>
      <div
        className="MuiInput-root-236 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-244 MuiInput-inputType-247 MuiInput-inputMarginDense-245"
          defaultValue={undefined}
          disabled={false}
          id="tournament-podSizeMinimum"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="number"
          value=""
        />
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 APIComponent-field-156"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-marginDense-228"
        data-shrink={false}
        htmlFor="tournament-podSizeMaximum"
      >
        Maximum Pod Size
      </label>
      <div
        className="MuiInput-root-236 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-244 MuiInput-inputType-247 MuiInput-inputMarginDense-245"
          defaultValue={undefined}
          disabled={false}
          id="tournament-podSizeMaximum"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="number"
          value=""
        />
      </div>
    </div>
  </div>
  <hr
    className="MuiDivider-root-217"
  />
  <div
    className="MuiCardActions-root-265"
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 MuiCardActions-action-266"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-marginDense-228"
        data-shrink={false}
        htmlFor="tournament-newCategory"
      >
        Add Category
      </label>
      <div
        className="MuiInput-root-236 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-244 MuiInput-inputMarginDense-245"
          defaultValue={undefined}
          disabled={false}
          id="tournament-newCategory"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
    <button
      aria-label="Add Category"
      className="MuiButtonBase-root-273 MuiIconButton-root-267 MuiCardActions-action-266"
      disabled={false}
      id="tournament-newCategory-add"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-272"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-254"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-276"
      />
    </button>
    <button
      aria-label="Create"
      className="MuiButtonBase-root-273 MuiButton-root-283 MuiButton-text-285 MuiButton-flat-288 APIComponent-right-157 MuiCardActions-action-266"
      disabled={false}
      id="tournament-submit"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-284"
      >
        Create
      </span>
      <span
        className="MuiTouchRipple-root-276"
      />
    </button>
  </div>
</div>
`;

exports[`matches the prior snapshot 2`] = `
<div
  className="MuiPaper-root-159 MuiPaper-elevation1-162 MuiPaper-rounded-160 MuiCard-root-158 APIComponent-root-154"
>
  <div
    className="MuiCardHeader-root-186"
  >
    <div
      className="MuiCardHeader-content-189"
    >
      <span
        className="MuiTypography-root-192 MuiTypography-headline-197 MuiCardHeader-title-190"
      >
        New Tournament
      </span>
    </div>
  </div>
  <hr
    className="MuiDivider-root-217"
  />
  <div
    className="MuiCardContent-root-221 APIComponent-content-155"
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 MuiFormControl-fullWidth-225 APIComponent-field-156"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-marginDense-228"
        data-shrink={false}
        htmlFor="tournament-name"
      >
         Name
      </label>
      <div
        className="MuiInput-root-236 MuiInput-fullWidth-243 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={true}
          className="MuiInput-input-244 MuiInput-inputMarginDense-245"
          defaultValue={undefined}
          disabled={false}
          id="tournament-name"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 MuiFormControl-fullWidth-225 APIComponent-field-156"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-marginDense-228"
        data-shrink={false}
        htmlFor="tournament-description"
      >
        Description
      </label>
      <div
        className="MuiInput-root-236 MuiInput-fullWidth-243 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-244 MuiInput-inputMarginDense-245"
          defaultValue={undefined}
          disabled={false}
          id="tournament-description"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 APIComponent-field-156"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-marginDense-228"
        data-shrink={false}
        htmlFor="tournament-category"
      >
        Category
      </label>
      <div
        className="MuiInput-root-236 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <div
          className="MuiSelect-root-249"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-250 MuiSelect-selectMenu-251 MuiInput-input-244 MuiInput-inputMarginDense-245"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "&#8203;",
                }
              }
            />
          </div>
          <input
            autoComplete={undefined}
            autoFocus={undefined}
            defaultValue={undefined}
            id="tournament-category"
            name={undefined}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            rows={undefined}
            type="hidden"
            value=""
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-254 MuiSelect-icon-253"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 APIComponent-field-156"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-shrink-229 MuiInputLabel-marginDense-228"
        data-shrink={true}
        htmlFor="tournament-date"
      >
        Date
      </label>
      <div
        className="MuiInput-root-236 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-244 MuiInput-inputType-247 MuiInput-inputMarginDense-245"
          defaultValue={undefined}
          disabled={false}
          id="tournament-date"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="date"
          value="2018-07-30"
        />
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 APIComponent-field-156"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-shrink-229 MuiInputLabel-marginDense-228"
        data-shrink={true}
        htmlFor="tournament-pairingMethod"
      >
        Pairing Method
      </label>
      <div
        className="MuiInput-root-236 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <div
          className="MuiSelect-root-249"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-250 MuiSelect-selectMenu-251 MuiInput-input-244 MuiInput-inputMarginDense-245"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            Historic
          </div>
          <input
            autoComplete={undefined}
            autoFocus={undefined}
            defaultValue={undefined}
            id="tournament-pairingMethod"
            name={undefined}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            rows={undefined}
            type="hidden"
            value={1}
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-254 MuiSelect-icon-253"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 APIComponent-field-156"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-shrink-229 MuiInputLabel-marginDense-228"
        data-shrink={true}
        htmlFor="tournament-pairingMethodInitial"
      >
        Initial Pairing Method
      </label>
      <div
        className="MuiInput-root-236 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <div
          className="MuiSelect-root-249"
        >
          <div
            aria-haspopup="true"
            aria-owns={null}
            aria-pressed="false"
            className="MuiSelect-select-250 MuiSelect-selectMenu-251 MuiInput-input-244 MuiInput-inputMarginDense-245"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex={0}
          >
            Historic
          </div>
          <input
            autoComplete={undefined}
            autoFocus={undefined}
            defaultValue={undefined}
            id="tournament-pairingMethodInitial"
            name={undefined}
            onKeyDown={undefined}
            onKeyUp={undefined}
            placeholder={undefined}
            rows={undefined}
            type="hidden"
            value={1}
          />
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-254 MuiSelect-icon-253"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M7 10l5 5 5-5z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 APIComponent-field-156"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-shrink-229 MuiInputLabel-marginDense-228"
        data-shrink={true}
        htmlFor="tournament-podSizeMinimum"
      >
        Minimum Pod Size
      </label>
      <div
        className="MuiInput-root-236 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-244 MuiInput-inputType-247 MuiInput-inputMarginDense-245"
          defaultValue={undefined}
          disabled={false}
          id="tournament-podSizeMinimum"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="number"
          value={4}
        />
      </div>
    </div>
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 APIComponent-field-156"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-shrink-229 MuiInputLabel-marginDense-228"
        data-shrink={true}
        htmlFor="tournament-podSizeMaximum"
      >
        Maximum Pod Size
      </label>
      <div
        className="MuiInput-root-236 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-244 MuiInput-inputType-247 MuiInput-inputMarginDense-245"
          defaultValue={undefined}
          disabled={false}
          id="tournament-podSizeMaximum"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="number"
          value={7}
        />
      </div>
    </div>
  </div>
  <hr
    className="MuiDivider-root-217"
  />
  <div
    className="MuiCardActions-root-265"
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root-222 MuiFormControl-marginDense-224 MuiCardActions-action-266"
    >
      <label
        className="MuiFormLabel-root-231 MuiInputLabel-root-226 MuiInputLabel-formControl-227 MuiInputLabel-animated-230 MuiInputLabel-marginDense-228"
        data-shrink={false}
        htmlFor="tournament-newCategory"
      >
        Add Category
      </label>
      <div
        className="MuiInput-root-236 MuiInput-formControl-237 MuiInput-underline-240"
      >
        <input
          aria-invalid={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiInput-input-244 MuiInput-inputMarginDense-245"
          defaultValue={undefined}
          disabled={false}
          id="tournament-newCategory"
          name={undefined}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={false}
          rows={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
    <button
      aria-label="Add Category"
      className="MuiButtonBase-root-273 MuiIconButton-root-267 MuiCardActions-action-266"
      disabled={false}
      id="tournament-newCategory-add"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-272"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-254"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-276"
      />
    </button>
    <button
      aria-label="Create"
      className="MuiButtonBase-root-273 MuiButton-root-283 MuiButton-text-285 MuiButton-flat-288 APIComponent-right-157 MuiCardActions-action-266"
      disabled={false}
      id="tournament-submit"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-284"
      >
        Create
      </span>
      <span
        className="MuiTouchRipple-root-276"
      />
    </button>
  </div>
</div>
`;
